# Plex-Links

./: .gitignore  LICENSE  Makefile  pyproject.toml
config/: logging.conf
config/docker/compose/: docker-compose.local.yaml
config/docker/scripts/: local-entrypoint.sh
src/plex_links/: __init__.py  backup.py  flatten.py  hard_link.py  main.py  unrar.py  utils.py
tests/: conftest.py  test_flatten.py  test_hardlink.py  test_ln_mkvs.py
